# OmniRAG

./: .gitignore  AI_Agent1.py  AI_Agent1_initial.py  AI_Agent2.py  AI_Agent3.py  AI_Agent4.py  AI_Agent5.py  Graph1_prac.ipynb  Graph2.ipynb  Graph4.ipynb  Graph4_prac.ipynb  Graph5.ipynb  Graph5_prac.ipynb  Graph_1.ipynb  Graph_2_prac.ipynb  Graph_3.ipynb  Graph_3_prac.ipynb  RAG.py  RAG1.py  RAG2.py  RAG3.py  RAG4.py  RAG5.py  RAG6.py  README.md  app.py  app1.py  app3.py  app4.py  app5.py  app6.py  download_models.py  evaluate_rag.py  evaluate_rag1.py  logging.txt  photoelectric_rag_evaluation.csv  pyproject.toml  quickstart.md
chroma_db/: chroma.sqlite3
qdrant_db/: meta.json
qdrant_db/collection/hybrid_Classical_Photoelectric_effect_pdf_0/: storage.sqlite
qdrant_db/collection/hybrid_sample_for_testing_image_generation_pdf_0/: storage.sqlite
